--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,4 @@
+# .github/workflows/ci.yml
 name: CI
 
 on:
@@ -10,12 +11,38 @@ jobs:
   validate:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v4
     
-    - name: Validate docker-compose
+    - name: Set up Docker Compose
+      uses: docker/setup-buildx-action@v3
+    
+    - name: Install Docker Compose
+      run: |
+        sudo curl -L "https://github.com/docker/compose/releases/download/v2.23.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        sudo chmod +x /usr/local/bin/docker-compose
+        sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
+    
+    - name: Copy env file
+      run: |
+        cp .env.example .env
+    
+    - name: Validate docker-compose configuration
       run: |
         docker-compose config
     
-    - name: Validate Traefik config
+    - name: Validate Traefik static configuration
       run: |
-        docker run --rm -v $(pwd)/config:/etc/traefik traefik:${{ vars.TRAEFIK_VERSION }} traefik --configFile=/etc/traefik/traefik.yml
+        docker run --rm -v $(pwd)/config:/etc/traefik -v $(pwd)/.env:/run/secrets/env traefik:${{ vars.TRAEFIK_VERSION || 'v2.10' }} traefik --configFile=/etc/traefik/traefik.yml
+    
+    - name: Check for syntax errors in dynamic configs
+      run: |
+        # Check if dynamic config directory exists
+        if [ -d "config/dynamic" ]; then
+          echo "Dynamic config directory exists"
+          # For now, just check if directory is accessible
+          ls -la config/dynamic/
+        else
+          echo "Dynamic config directory does not exist - creating"
+          mkdir -p config/dynamic
+        fi
