--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-# .github/workflows/ci.yml
 name: CI
 
 on:
@@ -14,35 +13,28 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
     
-    - name: Set up Docker Compose
+    - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
     
     - name: Install Docker Compose
       run: |
-        sudo curl -L "https://github.com/docker/compose/releases/download/v2.23.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        sudo curl -L "https://github.com/docker/compose/releases/download/v2.39.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
         sudo chmod +x /usr/local/bin/docker-compose
         sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
     
-    - name: Copy env file
+    - name: Prepare environment
       run: |
         cp .env.example .env
+        mkdir -p config/dynamic
     
     - name: Validate docker-compose configuration
       run: |
         docker-compose config
     
-    - name: Validate Traefik static configuration
+    - name: Validate Traefik configuration
       run: |
-        docker run --rm -v $(pwd)/config:/etc/traefik -v $(pwd)/.env:/run/secrets/env traefik:${{ vars.TRAEFIK_VERSION || 'v3.5' }} traefik --configFile=/etc/traefik/traefik.yml
-    
-    - name: Check for syntax errors in dynamic configs
-      run: |
-        # Check if dynamic config directory exists
-        if [ -d "config/dynamic" ]; then
-          echo "Dynamic config directory exists"
-          # For now, just check if directory is accessible
-          ls -la config/dynamic/
-        else
-          echo "Dynamic config directory does not exist - creating"
-          mkdir -p config/dynamic
-        fi
+        docker run --rm \
+          -v $(pwd)/config:/etc/traefik \
+          -v $(pwd)/.env:/run/secrets/env \
+          traefik:v3.5 \
+          traefik --configFile=/etc/traefik/traefik.yml
