--- a/config/traefik.yml
+++ b/config/traefik.yml
@@ -1,4 +1,3 @@
-# config/traefik.yml
 # Global Configuration
 global:
   checkNewVersion: false
@@ -15,24 +14,17 @@ entryPoints:
           to: websecure
           scheme: https
           permanent: true
-    # Enable Proxy Protocol if needed
-    # proxyProtocol:
-    #   trustedIPs:
-    #     - 172.20.0.0/16
   websecure:
     address: ":443"
-    # Enable HTTP/3
+    # HTTP/3 is now stable in v3+
     http3:
       advertisedPort: 443
+    # QUIC configuration (optional)
+    quic: {}
     # Enable Proxy Protocol if needed
     # proxyProtocol:
     #   trustedIPs:
     #     - 172.20.0.0/16
-    # Enable QUIC if needed
-    # quic:
-    #   maxIdleTimeout: 30s
-    #   maxIncomingStreams: 100
-    #   connIdLength: 8
 
 # Certificate Resolvers
 certificatesResolvers:
@@ -49,7 +41,6 @@ certificatesResolvers:
       #   resolvers:
       #     - "1.1.1.1:53"
       #     - "8.8.8.8:53"
-      # caServer: https://acme-staging-v02.api.letsencrypt.org/directory # For testing
 
 # API and Dashboard Configuration
 api:
@@ -81,33 +72,6 @@ accessLog:
         X-Forwarded-For: keep
         X-Real-IP: keep
 
-# Tracing Configuration (if using Jaeger)
-# tracing:
-#   jaeger:
-#     samplingServerURL: http://jaeger:5778/sampling
-#     samplingType: const
-#     samplingParam: 1.0
-
-# Metrics Configuration (if using Prometheus)
-# metrics:
-#   prometheus:
-#     buckets:
-#       - 0.1
-#       - 0.3
-#       - 1.2
-#       - 5.0
-#     entryPoint: metrics
-#   entryPoint:
-#     - metrics
-
-# Experimental Features
-experimental:
-  http3: true
-  # plugins:
-  #   plugin-name:
-  #     moduleName: github.com/xxx/xxx
-  #     version: v0.0.1
-
 # Providers Configuration
 providers:
   docker:
@@ -118,5 +82,15 @@ providers:
     useBindPortIP: false
     refreshSeconds: 15
   file:
-    directory: /etc/traefik/config
+    directory: /etc/traefik/config/dynamic
     watch: true
+
+# Metrics Configuration (if using Prometheus)
+# metrics:
+#   prometheus:
+#     buckets:
+#       - 0.1
+#       - 0.3
+#       - 1.2
+#       - 5.0
+#     entryPoint: metrics
