--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,14 +13,18 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
     
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-    
-    - name: Install Docker Compose
-      run: |
-        sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-        sudo chmod +x /usr/local/bin/docker-compose
-        sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
+    # https://github.com/docker/setup-compose-action
+    - name: Set up Docker Compose
+      uses: docker/setup-compose-action@v1
+
+    #- name: Set up Docker Buildx
+    #  uses: docker/setup-buildx-action@v3
+#
+    #- name: Install Docker Compose
+    #  run: |
+    #    sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+    #    sudo chmod +x /usr/local/bin/docker-compose
+    #    sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
     
     - name: Prepare environment
       run: |
@@ -33,8 +37,13 @@ jobs:
     
     - name: Validate Traefik configuration
       run: |
+        # Create a test config without environment variables for validation
+        cp config/traefik.yml config/traefik-test.yml
+        sed -i 's/${LOG_LEVEL:-INFO}/INFO/g' config/traefik-test.yml
+        sed -i 's/${ACME_EMAIL}/test@example.com/g' config/traefik-test.yml
+        sed -i 's/${LOG_LEVEL:-INFO}/INFO/g' config/traefik-test.yml
+        
         docker run --rm \
           -v $(pwd)/config:/etc/traefik \
-          -v $(pwd)/.env:/run/secrets/env \
           traefik:v3.5 \
-          traefik --configFile=/etc/traefik/traefik.yml
+          traefik --configFile=/etc/traefik/traefik-test.yml
