--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,17 +14,17 @@ jobs:
       uses: actions/checkout@v4
     
     # https://github.com/docker/setup-compose-action
-    - name: Set up Docker Compose
-      uses: docker/setup-compose-action@v1
+    #- name: Set up Docker Compose
+    #  uses: docker/setup-compose-action@v1
 
-    #- name: Set up Docker Buildx
-    #  uses: docker/setup-buildx-action@v3
-#
-    #- name: Install Docker Compose
-    #  run: |
-    #    sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-    #    sudo chmod +x /usr/local/bin/docker-compose
-    #    sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Install Docker Compose
+      run: |
+        sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        sudo chmod +x /usr/local/bin/docker-compose
+        sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
     
     - name: Prepare environment
       run: |
