--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   traefik:
     image: traefik:v3.5
@@ -17,7 +15,7 @@ services:
       # Docker Provider
       - --providers.docker=true
       - --providers.docker.exposedbydefault=false
-      - --providers.docker.network=traefik
+      - --providers.docker.network=traefik_default 
       
       # File Provider
       - --providers.file.directory=/etc/traefik/config/dynamic
@@ -63,7 +61,7 @@ services:
       - NAMECHEAP_API_USER=${NAMECHEAP_API_USER}
       - NAMECHEAP_API_KEY=${NAMECHEAP_API_KEY}
     networks:
-      - traefik
+      - traefik  # This will create traefik_default network
     security_opt:
       - no-new-privileges:true
     labels:
@@ -138,5 +136,5 @@ services:
 
 networks:
   traefik:
-    name: traefik
+    name: traefik_default 
     external: false
