--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -135,7 +135,8 @@ services:
     user: root
 
 networks:
-  default:
-    external:
-      name: traefik_default
-      
+  traefik:
+    name: traefik_default 
+    external: true
+
+    
