--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       - --global.checknewversion=false
       - --global.sendanonymoususage=false
       - --ping=true
-      - --ping.entrypoint=web
+      # - --ping.entrypoint=web
       
       # EntryPoints
       - --entrypoints.web.address=:80
