--- a/config/dynamic/middlewares.yml
+++ b/config/dynamic/middlewares.yml
@@ -15,11 +15,11 @@ http:
         contentSecurityPolicy: "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'"
         
         # Custom Request Headers
-        customRequestHeaders:
-          X-Forwarded-Proto: "https"
-          X-Real-IP: ""
-          X-Forwarded-For: ""
-          X-Forwarded-Host: ""
+        # customRequestHeaders:
+        #   X-Forwarded-Proto: "https"
+        #   X-Real-IP: ""
+        #   X-Forwarded-For: ""
+        #   X-Forwarded-Host: ""
         
         # Additional Security
         hostsProxyHeaders:
